--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Page 2">
     <meta property="og:type" content="website">
   </head>
-  <body data-path-to-root="/" data-include-products="false" class="u-body u-xl-mode" data-lang="en" __processed_92ed7695-8ba4-444c-9875-390cd622338b__="true" data-new-gr-c-s-check-loaded="14.1186.0" data-gr-ext-installed="" style="position: static;">
+  <body data-path-to-root="/" data-include-products="false" class="u-body u-xl-mode" data-lang="en" __processed_6b193761-7df4-49ff-a8c1-513bdb3674a6__="true" data-new-gr-c-s-check-loaded="14.1186.0" data-gr-ext-installed="">
     <section class="u-clearfix u-section-1" id="sec-e818">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1" spellcheck="false"> Mastering PTE with Paradigm24: Your Ultimate Preparation Partner</h1>
@@ -48,9 +48,11 @@
         <p class="u-text u-text-default u-text-11">The usability of PTE preparation software is essential for effective learning. Paradigm24 boasts a user-friendly interface that makes it easy for students to navigate through the study materials and track their progress. The responsive design ensures that users can focus on their studies without struggling with complex navigation. This ease of use makes Paradigm24 an ideal choice for students at all levels.</p>
         <p class="u-text u-text-default u-text-12">Comprehensive PTE Exam Preparation</p>
         <p class="u-text u-text-default u-text-13">Preparing for the PTE exam requires a blend of proper skills and knowledge. Paradigm24 provides a structured approach to PTE preparation, offering everything from practice papers to mock tests. This comprehensive preparation ensures that students are well-equipped to face the exam with confidence. The software’s commitment to providing the best services, whether through tests or progress reports, makes it a reliable partner in the PTE preparation journey.</p>
-        <p class="u-text u-text-default u-text-14">For more information on how Paradigm24 can help you ace your PTE exam, visit Paradigm24’s blog on top PTE software in India.</p>
+        <p class="u-text u-text-default u-text-14">For more information on how Paradigm24 can help you ace your PTE exam, visit Paradigm24’s <a href="https://paradigm24.in/blog-detail/Top-PTE-Software-India:-Ace-Your-PTE-with-Paradigm24" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" target="_blank" data-abc="true">blog on top PTE software in India</a>.
+        </p>
         <p class="u-text u-text-default u-text-15">Conclusion</p>
-        <p class="u-text u-text-default u-text-16">Paradigm24 offers everything you need to prepare effectively for the PTE exam. From updated questions to comprehensive progress reports, all essential tools are available in one software. Paradigm24’s dedication to helping students achieve high scores is evident through its various services and features. As one of the best PTE software in India, it has earned a reputable position and trust among users. Now is the time to elevate your PTE scores with Paradigm24. Let this software be your partner on the path to success. For a detailed guide on mastering the PTE with Paradigm24, check out this article on Paradigm24.</p>
+        <p class="u-text u-text-default u-text-16" spellcheck="false">Paradigm24 offers everything you need to prepare effectively for the PTE exam. From updated questions to comprehensive progress reports, all essential tools are available in one software. Paradigm24’s dedication to helping students achieve high scores is evident through its various services and features. As one of the best PTE software in India, it has earned a reputable position and trust among users. Now is the time to elevate your PTE scores with Paradigm24. Let this software be your partner on the path to success. For a detailed guide on mastering the PTE with Paradigm24, check out <a href="https://paradigm24.in/blog-detail/Top-PTE-Software-India:-Ace-Your-PTE-with-Paradigm24" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank" data-abc="true">this article on Paradigm24</a>.
+        </p>
       </div>
     </section>
     
