--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section class="u-border-2 u-border-grey-75 u-border-no-left u-border-no-right u-border-no-top u-clearfix u-section-2" id="carousel_b7cd">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-text u-text-default u-text-1">When preparing for the Pearson Test of English (PTE), choosing the right software is crucial. In India, Paradigm24 has emerged as a top choice for students aiming to ace their PTE exams. This software is designed with various tools to assist students in excelling, offering customized modules that help achieve better scores. Here’s why Paradigm24 is a valuable resource for PTE preparation. </p>
+        <p class="u-text u-text-default u-text-1" style="color:red;" >When preparing for the Pearson Test of English (PTE), choosing the right software is crucial. In India, Paradigm24 has emerged as a top choice for students aiming to ace their PTE exams. This software is designed with various tools to assist students in excelling, offering customized modules that help achieve better scores. Here’s why Paradigm24 is a valuable resource for PTE preparation. </p>
         <p class="u-text u-text-default u-text-2">Why Choose Paradigm24? </p>
         <p class="u-text u-text-default u-text-3">Paradigm24 is regarded as one of the best PTE preparation software in India due to its comprehensive range of services and benefits. When selecting PTE preparation software, it’s vital to ensure it includes updated materials, real exam simulations, graphical progress reports, and the latest advancements. Paradigm24 excels in all these areas, making it a preferred choice among students. </p>
         <p class="u-text u-text-default u-text-4">Updated Material for Success </p>
